syntax = "proto3";

package user;

service UserService {
  rpc getUser (GetUserRequest) returns (User) {}
}

message GetUserRequest {
  string id = 1;
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phoneNumber = 5;
}
